# rust_testing

./: Cargo.toml  imgui.ini  settings.json
assets/: rig.glb  rig.gltf
src/: app_control.rs  camera_util.rs  debug_camera.rs  egui_histogram.rs  flycam.rs  imgui.rs  main.rs  particles.rs  phases.rs  serialization.rs  settings_file.rs
