[package]
name = "rust_bevy_test"
version = "0.1.0"
edition = "2024"

[dependencies]
#bevy = { version = "0.17.2", features = ["bevy_dev_tools"] }
bevy = { version = "0.17.2", features = ["dynamic_linking", "bevy_dev_tools"] }
#bevy_mod_imgui = "0.7.2"
bevy_mod_imgui = { git = "https://github.com/jbrd/bevy_mod_imgui", branch = "main" } # 0.8 needed for bevy 0.17 but not yet in crates.io ?
imgui = "0.12.0"

rand = "0.9.2"
rand_chacha = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"

# Not actually working?
#[dev-dependencies]
#bevy = { version = "0.17.2", features = ["dynamic_linking", "bevy_dev_tools"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 0
#opt-level = 3
#debug = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
debug = 1 # Shrink insanely huge pdb a bit?

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
