[package]
name = "rust_bevy_test"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.2", features = ["dynamic_linking"] } # bevy_dev_tools
#bevy = { version = "0.17.2" }
#bevy = { version = "0.17.2", features = ["trace", "trace_tracy"] }

#tracing-tracy = { version = "0.11.4", default-features = false, features = [
#	"enable",
#	"system-tracing",
#	"context-switch-tracing",
#	"sampling",
#	"code-transfer",
#	"broadcast",
#	# "callstack-inlines", # using TRACY_NO_CALLSTACK_INLINES since tracy becomes incredibly slow otherwise when using sampling NOTE: Still extremely slow (like 10 minutes) probably due to hundred MB pdbs?
#	"flush-on-exit"
#]}

bevy_egui = "0.38.0"
bevy-inspector-egui = "0.35.0"

rand = "0.9.2"
rand_chacha = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
bevy_serde_lens = "0.7.0"

tracing = "0.1.41"
tracing-subscriber = "0.3.20"

# Temp local fix for dx12 push constants issue until PR is possibly accepted
[patch.crates-io]
#bevy_egui = { path = "../bevy_egui" }
bevy_egui = { git = "https://github.com/rbnelr/bevy_egui.git" }

# Not actually working?
#[dev-dependencies]
#bevy = { version = "0.17.2", features = ["dynamic_linking", "bevy_dev_tools"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
#opt-level = 1
#debug = 1
opt-level = 0

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
debug = 1 # Shrink insanely huge pdb a bit?

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

debug = 1
